# RELEASE-CRUCIB-2026

./: .coverage  .dockerignore  .env.example  .gitignore  .railwayignore  AGENTS_EXPANSION_COMPLETE.md  APP_AUDIT_GAPS_AND_PERFORMANCE.md  ARCHITECTURE_OLD_VS_NEW.md  AUDIT_FIX_IMPLEMENTATION_PLAN.md  BASELINE_REPORT.md  BLOCKERS_COMPLETE.md  CHECKLIST_TEST_GUIDE.md  COMPETITIVE_ADVANTAGE.md  COMPREHENSIVE_IMPROVEMENTS_AND_ROI_REPORT.md  CONTRIBUTING.md  CURSOR_PARITY_COMPLETE_REPORT.md  CrucibAI_COMPREHENSIVE_COMPARISON.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_LIVE.sh  DIAGNOSTIC_SCAN.py  DOCKER_REBUILD_INSTRUCTIONS.md  Dockerfile  Dockerfile.agent  ENHANCEMENT_PLAN_10_10.md  EXHAUSTIVE_REMOTE_TO_LOCAL_ADDITIONS.md  FEATURE_COMPARISON_LOCAL_VS_REMOTE.md  FILE_MANIFEST.md  FINAL_ASSESSMENT_8_5_10.md  FINAL_DEPLOYMENT_SCRIPT.sh  FINAL_GREEN_10_10_REPORT.md  FINAL_HARDENING_REPORT.md  FINAL_RANKING_TOP_10.md  FIX_ROADMAP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PHASES_AND_PROOF.md  IMPLEMENTATION_STATUS.md  INCIDENT_PLAYBOOKS.md  INDUSTRY_RANKING_COMPARISON.md  (+85 more)
.tmp_pytest_manual/: tmp13v86g84.py  tmp15b2thdo.py  tmp2gv94owl.py  tmp3lqc7fk6.py  tmp3rfxh9j2.py  tmp3uiik49b.py  tmp4z8pew5o.py  tmp5eczu84d.py  tmp5ve47tvl.py  tmp6a0vdqfs.py  tmp7s_v1fia.py  tmp95sdmwa8.py  tmp_5zetyhj.py  tmp_umme3qh.py  tmpa1po3i9t.py  tmpb8cjnauc.py  tmpbeux529y.py  tmpbhkzo039.py  tmpct_x9qd_.py  tmpcu1lk8jk.js  tmpdrjwiqn5.py  tmpee5lh6s_.py  (+29 more)
sdks/python/: README.md  pyproject.toml
sdks/python/crucibai/: __init__.py  client.py
(+3067 files in other folders)
